<resources>
    <string name="app_name">Cemiuiler</string>
    <string name="xposed_description">Make MIUI Great Again!</string>
    <string name="language">English</string>
    <string name="translator">Lin Qiqi</string>
    <string name="translator_url">https://github.com/mu7220</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="about_use">Quote</string>
    <string name="about_use_desc">Cemiuiler uses some or all of the following open source projects, thanks to the developers of these projects for their support (in no particular order)</string>
    <string name="about_contributer">Contributor</string>
    <string name="about_contributer_desc">Thanks to the following contributors for their help in the development of Cemiuiler (in no particular order)</string>
    <string name="about_donation">Sponsor</string>
    <string name="about_donation_desc">You can support us by donating here</string>
    <string name="home">System launcher</string>
    <string name="aireco">AI Reco</string>
    <string name="browser">Browser</string>
    <string name="camera">Camera</string>
    <string name="clock">Clock</string>
    <string name="gallery">Gallery</string>
    <string name="guard_provider">MIUI security components</string>
    <string name="incallui">Phone</string>
    <string name="xiao_ai">xiao ai</string>
    <string name="joyose">Joyose</string>
    <string name="lbe">Permissions</string>
    <string name="market">GetApps</string>
    <string name="mediaeditor">Gallery Editor</string>
    <string name="milink">Cast</string>
    <string name="mirror">MIUI+</string>
    <string name="mms">Message</string>
    <string name="security_center_remove_open_app_confirmation_popup">Remove open app popup</string>
    <string name="security_center_remove_open_app_confirmation_popup_summary">Remove \"Allow XXX to open XXX\" Chain start popup</string>
    <string name="security_center_no_permission">Required permissions not granted</string>
    <string name="mishare">Mi Share</string>
    <string name="music">Music</string>
    <string name="package_installer">Package installer</string>
    <string name="personal_assistant">App vault</string>
    <string name="powerkeeper">Battery and performance</string>
    <string name="scanner">Scanner</string>
    <string name="screenrecorder">Screen Recorder</string>
    <string name="screenshot">Screenshot</string>
    <string name="security_center">Security</string>
    <string name="system_framework">System Framework</string>
    <string name="system_settings">Settings</string>
    <string name="system_ui">System UI</string>
    <string name="system_ui_plugin">System UI Plugin</string>
    <string name="theme_manager">Themes</string>
    <string name="updater">Updater</string>
    <string name="various">Other</string>
    <string name="weather">Weather</string>
    <string name="custom_hook">Custom</string>
    <string name="about_developer_title">Developer</string>
    <string name="about_translator_title">Translator</string>
    <string name="about_chat_title">Discussion</string>
    <string name="about_other_title">Other</string>
    <string name="about_qq_group">QQ Group</string>
    <string name="about_qq_channel">QQ Channel</string>
    <string name="about_tg_group">Telegram Group</string>
    <string name="about_tg_channel">Telegram Channel</string>
    <string name="about_github">Source Code</string>
    <string name="about_crwd">"Crowdin"</string>
    <string name="about_crwd_desc">Help us translate Cemiuiler into you language</string>
    <string name="settings_data_title">Backup and Restore</string>
    <string name="settings_bug_title">Troubleshooting</string>
    <string name="settings_debug_title">Debug</string>
    <string name="settings_hide_app_icon">Desktop Icons</string>
    <string name="settings_icon">Settings Icons</string>
    <string name="settings_reboot">Restart the target app</string>
    <string name="settings_back">Backup module settings</string>
    <string name="settings_rest">Restore module settings</string>
    <string name="settings_reset">Reset module settings</string>
    <string name="settings_safe_mode">Safe mode</string>
    <string name="settings_safe_mode_desc">Stop module function</string>
    <string name="aireco_device_modify">Remove beta restrictions</string>
    <string name="browser_debug_mode">Developer options</string>
    <string name="clock_enable_hour_glass">Unlock the clock hourglass animation</string>
    <string name="gallery_title_settings">Settings</string>
    <string name="gallery_title_feature">Function</string>
    <string name="gallery_title_recommend">Recommend</string>
    <string name="gallery_title_editor">Editor</string>
    <string name="gallery_enable_hdr_enhanced">Unlock display high dynamic range</string>
    <string name="gallery_enable_pdf">Unlock generate PDF</string>
    <string name="gallery_enable_ocr">Unlock OCR</string>
    <string name="gallery_enable_ocr_form">Unlock scan table</string>
    <string name="gallery_enable_id_photo">Unlock ID</string>
    <string name="gallery_enable_photo_movie">Unlock Clip</string>
    <string name="gallery_enable_video_post">Unlock Video effects</string>
    <string name="gallery_enable_video_editor">Unlock Video editor</string>
    <string name="gallery_enable_text_yanhua">Unlock Text fireworks</string>
    <string name="gallery_enable_remover_2">Unlock Erase</string>
    <string name="gallery_enable_magic_matting">Unlock Cut</string>
    <string name="gallery_enable_magic_sky">Unlock Sky</string>
    <string name="guard_provider_disable_upload_applist">Prevent automatic upload of installed app list</string>
    <string name="home_gesture">Gesture</string>
    <string name="home_layout">Layout</string>
    <string name="home_folder">Folder</string>
    <string name="home_title">Icon and Title</string>
    <string name="home_recent">Recent</string>
    <string name="home_widget">Widget</string>
    <string name="home_dock">Dock</string>
    <string name="home_drawer">Drawer</string>
    <string name="home_other">Other</string>
    <string name="home_title_icon_title">Icon</string>
    <string name="home_title_title_title">Title</string>
    <string name="home_title_big_icon_corner">Medium icon round corner follow</string>
    <string name="home_dock_bg_custom_enable">Turn on customization</string>
    <string name="home_dock_bg_height">Height</string>
    <string name="home_dock_bg_height_desc">Dock height</string>
    <string name="home_dock_bg_margin_horizontal">Vertical margin</string>
    <string name="home_dock_bg_margin_horizontal_desc">Dock distance from both sides of the screen</string>
    <string name="home_dock_bg_margin_top">Top margin</string>
    <string name="home_dock_bg_margin_top_desc">Margin of the Dock from the screen indicator</string>
    <string name="home_dock_bg_margin_bottom">Bottom margin</string>
    <string name="home_dock_bg_margin_bottom_desc">Margin of the Dock from the bottom of the screen</string>
    <string name="home_dock_icon_margin_bottom">Icon bottom margin</string>
    <string name="home_dock_icon_margin_bottom_desc">Dock icon distance from screen bottom margin</string>
    <string name="home_dock_bg_custom">Background blur</string>
    <string name="home_dock_icon_bottom_margin">Icon distance from bottom margin</string>
    <string name="home_dock_margin_bottom">Margin of page indicator from bottom of screen</string>
    <string name="home_small_folder_title">Small Folder</string>
    <string name="home_big_folder_title">Big Folder</string>
    <string name="home_small_folder_icon_bg">Icon Background</string>
    <string name="home_small_folder_icon_bg_custom">Background custom</string>
    <string name="home_small_folder_icon_bg_size">Background size</string>
    <string name="home_big_folder_icon_bg_2x1">Horizontal three grid background custom</string>
    <string name="home_big_folder_icon_bg_2x1_custom">Custom</string>
    <string name="home_big_folder_icon_bg_width_2x1">Background width</string>
    <string name="home_big_folder_icon_bg_height_2x1">Background height</string>
    <string name="home_big_folder_icon_bg_1x2">Vertical three grid background custom</string>
    <string name="security_center_app_title">App management</string>
    <string name="security_center_battery_title">Battery Saver and Battery</string>
    <string name="security_center_privacy_title">Privacy protection</string>
    <string name="security_center_beauty_title">Front camera assistant</string>
    <string name="security_center_other_title">Other</string>
    <string name="security_center_newbox_title">Sidebar</string>
    <string name="security_center_bubble_and_freeform_title">Bubble and freeform</string>
    <string name="security_center_show_battery_temperature">Show battery temperature</string>
    <string name="security_center_ai_clipboard">Protect clipboard</string>
    <string name="security_center_blur_location">Lower positioning accuracy</string>
    <string name="security_center_get_number">Manage the application to obtain the mobile phone number and log in with one click</string>
    <string name="security_center_applock_pin_scramble">Applock out of order PIN</string>
    <string name="security_center_applock_pin_scramble_desc">Randomly change app lock PIN keypad sequence</string>
    <string name="security_center_beauty_light">Unlock Fill light brightness</string>
    <string name="security_center_beauty_light_auto">Unlock Adjust fill light brightness automatically</string>
    <string name="security_center_beauty_face">Unlock Beautify for video calls</string>
    <string name="security_center_beauty_privacy">Unlock Privacy camera</string>
    <string name="security_center_beauty_pc">Unlock Keep faces centered</string>
    <string name="security_center_disable_root_check">Disable root detection</string>
    <string name="security_center_remove_macro_black_list">Remove auto combo blacklist</string>
    <string name="security_center_newbox_custom_enable">Enable custom</string>
    <string name="security_center_newbox_bg_custom">Background blur</string>
    <string name="security_center_newbox_bg_padding_vertical">Horizontal margin</string>
    <string name="security_center_newbox_bg_padding_horizontal">Vertical margin</string>
    <string name="security_center_unlock_side_hide_freeform">Unlock side-hide freeform</string>
    <string name="security_center_unlock_side_hide_freeform_desc">Unlock the side-hide freeform for lowly-supported but restricted devices. This will also affect the behavior of the widget when the phone cuts to the background</string>
    <string name="security_app_title">Show additional app details</string>
    <string name="security_app_summary">Add new fields to app into page:\n- version code\n- full path to apk\n- data path\n- user ID\n- min SDK version\n- target SDK version\n- link to Play Store page\n- launch an app</string>
    <string name="security_app_sort_title">App management list sorting</string>
    <string name="security_app_sort_summary">Modify the default sorting of the application management list</string>
    <string name="security_restrict_app_title">Full limit</string>
    <string name="security_restrict_app_summary">Allows configuration of power saver and access to Wi-Fi for system apps</string>
    <string name="security_disable_app_title">Application state control</string>
    <string name="security_disable_app_summary">Allow disabling any app from app info page</string>
    <string name="security_score">Disable health check optimization</string>
    <string name="security_score_summary">Lock 100 points and disable optimization</string>
    <string name="security_center_skip_waiting_time">Skip countdown limit</string>
    <string name="security_center_remove_conversation_bubble_settings_restriction">Remove bubble notification app restrictions</string>
</resources>