<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory>

        <Preference
            android:title="@string/lbe"
            android:key="prefs_key_lbe"
            android:icon="@drawable/ic_lbe">
            <intent
                android:targetPackage="com.sevtinge.cemiuiler"
                android:targetClass="com.sevtinge.cemiuiler.ui.securitycenter.LbeActivity"/>
        </Preference>

        <Preference
            android:title="@string/powerkeeper"
            android:key="prefs_key_powerkeeper"
            android:icon="@drawable/ic_powerkeeper">
            <intent
                android:targetPackage="com.sevtinge.cemiuiler"
                android:targetClass="com.sevtinge.cemiuiler.ui.securitycenter.PowerKeeperActivity"/>
        </Preference>

        <Preference
            android:title="@string/guard_provider"
            android:key="prefs_key_guardprovider"
            android:icon="@drawable/ic_guard_provider_new">
            <intent
                android:targetPackage="com.sevtinge.cemiuiler"
                android:targetClass="com.sevtinge.cemiuiler.ui.securitycenter.GuardProviderActivity"/>
        </Preference>

        <Preference
            android:title="@string/security_center_app_title"
            android:key="prefs_key_app_manage"
            android:icon="@drawable/ic_guard_provider_new">
            <intent
                android:targetPackage="com.sevtinge.cemiuiler"
                android:targetClass="com.sevtinge.cemiuiler.ui.securitycenter.AppManageActivity"/>
        </Preference>

        <Preference
            android:title="@string/security_center_privacy_title"
            android:key="prefs_key_privacy_protection"
            android:icon="@drawable/ic_guard_provider_new">
            <intent
                android:targetPackage="com.sevtinge.cemiuiler"
                android:targetClass="com.sevtinge.cemiuiler.ui.securitycenter.PrivacyProtectionActivity"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security_center_battery_title">

        <SwitchPreference
            android:key="prefs_key_security_center_show_battery_temperature"
            android:title="@string/security_center_show_battery_temperature"
            android:defaultValue="false"
            app:isPreferenceVisible="true"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security_center_beauty_title">

        <SwitchPreference
                android:key="prefs_key_security_center_beauty_light"
                android:title="@string/security_center_beauty_light"
                android:defaultValue="false" />

        <SwitchPreference
                android:key="prefs_key_security_center_beauty_light_auto"
                android:title="@string/security_center_beauty_light_auto"
                android:defaultValue="false"
                android:dependency="prefs_key_security_center_beauty_light"/>

        <SwitchPreference
                android:key="prefs_key_security_center_beauty_face"
                android:title="@string/security_center_beauty_face"
                android:defaultValue="false" />

        <SwitchPreference
                android:key="prefs_key_security_center_beauty_privacy"
                android:title="@string/security_center_beauty_privacy"
                android:defaultValue="false" />

        <SwitchPreference
                android:key="prefs_key_security_center_beauty_pc"
                android:title="@string/security_center_beauty_pc"
                android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security_center_bubble_and_freeform_title">

        <SwitchPreference
                android:title="@string/security_center_unlock_side_hide_freeform"
                android:summary="@string/security_center_unlock_side_hide_freeform_desc"
                android:key="prefs_key_security_center_unlock_side_hide_freeform"
                android:defaultValue="false"
                app:isPreferenceVisible="false"/>

        <SwitchPreference
                android:title="@string/security_center_remove_conversation_bubble_settings_restriction"
                android:key="prefs_key_security_center_remove_conversation_bubble_settings_restriction"
                android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security_center_other_title">

        <SwitchPreference
            android:key="prefs_key_security_center_score"
            android:title="@string/security_score"
            android:summary="@string/security_score_summary"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="prefs_key_security_center_skip_count_down_limit"
            android:title="@string/security_center_skip_waiting_time"
            android:defaultValue="false"
            app:isPreferenceVisible="true"/>

        <SwitchPreference
                android:key="prefs_key_security_center_disable_root_check"
                android:title="@string/security_center_disable_root_check"
                android:defaultValue="false" />

        <SwitchPreference
            android:key="prefs_key_security_center_remove_macro_black_list"
            android:title="@string/security_center_remove_macro_black_list"
            android:defaultValue="false"
            app:isPreferenceVisible="true"/>

        <SwitchPreference
            android:key="prefs_key_security_center_remove_open_app_confirmation_popup"
            android:title="@string/security_center_remove_open_app_confirmation_popup"
            android:summary="@string/security_center_remove_open_app_confirmation_popup_summary"
            android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/security_center_newbox_title">

        <SwitchPreference
            android:title="@string/security_center_newbox_custom_enable"
            android:key="prefs_key_security_center_newbox_custom_enable"
            android:defaultValue="false" />

        <Preference
            android:title="@string/security_center_newbox_bg_custom"
            android:key="prefs_key_security_center_newbox_bg_custom"
            android:dependency="prefs_key_security_center_newbox_custom_enable" />

        <SeekBarPreference
            android:title="@string/security_center_newbox_bg_padding_vertical"
            android:key="prefs_key_security_center_newbox_bg_padding_vertical"
            android:defaultValue="0"
            app:maxValue="30"
            app:format="%d dp"
            app:showSeekBarValue="true"
            android:dependency="prefs_key_security_center_newbox_custom_enable"/>

        <SeekBarPreference
            android:title="@string/security_center_newbox_bg_padding_horizontal"
            android:key="prefs_key_security_center_newbox_bg_padding_horizontal"
            android:defaultValue="0"
            app:maxValue="30"
            app:format="%d dp"
            app:showSeekBarValue="true"
            android:dependency="prefs_key_security_center_newbox_custom_enable"/>

    </PreferenceCategory>

</PreferenceScreen>